# OptimusV2

./: CONTRACT.md  DEVELOPMENT.md  README.md  demo_image_optimization.ps1  final_validation.ps1  load_validation.ps1  setup.ps1  setup.sh  test_dummy_executor.json  test_oom.json  test_request.json  test_runtime_error.json  test_syntax_error.json  test_timeout.json  test_worker_config.ps1  ultimate_demo.ps1
bins/optimus-api/: Cargo.toml
bins/optimus-api/src/: handlers.rs  main.rs  metrics.rs  routes.rs
bins/optimus-cli/: Cargo.toml
bins/optimus-cli/src/: commands.rs  main.rs
bins/optimus-worker/: Cargo.toml
bins/optimus-worker/src/: engine.rs  evaluator.rs  executor.rs  main.rs
config/: languages.json
config/templates/: scaled-object-retry.yaml.tmpl  scaled-object.yaml.tmpl  worker-deployment.yaml.tmpl
dockerfiles/java/: Dockerfile
dockerfiles/python/: Dockerfile
dockerfiles/rust/: Dockerfile
k8s/: worker-deployment-java.yaml  worker-deployment-python.yaml  worker-deployment-rust.yaml
k8s/keda/: scaled-object-java-retry.yaml  scaled-object-java.yaml  scaled-object-python-retry.yaml  scaled-object-python.yaml  scaled-object-rust-retry.yaml  scaled-object-rust.yaml
libs/optimus-common/: Cargo.toml  EXECUTION_SEMANTICS.md
libs/optimus-common/src/: config.rs  lib.rs  redis.rs  types.rs
