[package]
name = "optimus-api"
version = "0.1.0"
edition = "2021"

[dependencies]
optimus-common = { path = "../../libs/optimus-common" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
