[package]
name = "optimus-api"
version = "0.1.0"
edition = "2021"

[dependencies]
optimus-common = { path = "../../libs/optimus-common" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
lazy_static = "1.4"
futures-util = "0.3"
dotenvy = "0.15"
