[package]
name = "optimus-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
optimus-common = { path = "../../libs/optimus-common" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
handlebars = "5.1"
