[package]
name = "optimus-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
optimus-common = { path = "../../libs/optimus-common" }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0"
anyhow = "1.0"
