[package]
name = "optimus-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
optimus-common = { path = "../../libs/optimus-common" }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bollard = "0.17"
futures-util = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.7"
hyper = "1.0"
dotenvy = "0.15"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
